# scoreboard-end

./: pyproject.toml
src/endstone_example/: __init__.py  example_plugin.py
